busybox-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-deployment
  labels:
    app: web
    kind: frontend
spec:
  template:
    metadata:
      name: busybox
      labels:
        app: web
        type: frontend
    spec:
      containers:
        - name: busybox
          image: busybox
  replicas: 3
  selector:
    matchLabels:
      type: frontend
