deploy-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-app
  labels:
    app: nginx-deploy
    type: frontend
spec:
  template:
    metadata:
      name: nginx-pod
      labels:
        app: nginx-deploy
        type: frontend
    spec:
      containers:
        - name: nginx
          image:  nginx:alpine
          ports:
          - containerPort: 80
  replicas: 3
  selector:
    matchLabels:
      type: frontend
