healthy-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: healthy-pod
  labels:
    app: web
spec:
  containers:
    - name: nginx
      image: nginx
      livenessProbe:
        initialDelaySeconds: 5
        periodSeconds: 3
        timeoutSeconds: 1
        failureThreshold: 5
        exec:
          command:
          - cat 
          - /etc/nginx/nginx.confg
      readinessProbe:
        initialDelaySeconds: 5
        periodSeconds: 3
        timeoutSeconds: 1
        failureThreshold: 7
        exec:
          command:
          - cat 
          - /etc/nginx/nginx.confg
