lab-pod.yml

apiVersion: apps/v1
kind: Pod
metadata:
  name: lab-pod
  labels:
    app: lab-pod
    type: frontend
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
       - containerPort: 80
      volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: nginx-vol
  volumes:
      - name: nginx-vol
        persistentVolumeClaim:
          claimName: lab-pvc
