pod-definition.yml
apiVersion: v1
kind: Pod
metadata:
  name: multi-pod
  labels:
    app: multi-pod
spec:
  containers:
    - name: nginx
      image: nginx:alpine
    - name: redis
      image: redis
    - name: memcached
      image: memcached
