ClusterIP-redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
    - name: redis-port
      port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app: redis
