svc-app.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  labels:
    app: nginx-svc
spec:
  type: NodePort
  ports:
    - name: http
      port: 80 
      targetPort: 80 
      nodePort: 31089 
      protocol: TCP
  selector:
      app: nginx-deploy
